fix(front): try to fix font size on mobile

--- a/front/index.sass
+++ b/front/index.sass
@@ -85,7 +85,7 @@ nav
 @media(max-width: 480px)
   .name
     +fixed
-    font-size: calc(#{$name-font-size} / 1.25)
+    font-size: calc(#{$name-font-size} / 1.75)
     width: 3em
     top: calc(50vh - 2em - 4rem)
     left: calc(50vw - 1.5em)
